# Arrival

./: .gitignore  .gitmodules  CMakeLists.txt  build.bat
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/include/: app.h
src/app/include/data/: csvdocument.h  csvhandling.h  jobtable.h  jobtablerow.h  selectedheaderstemplate.h  selectedheaderstemplatelist.h
src/app/include/ui/: appmodel.h  headerlistmodel.h  jobtablemodel.h  selectedheaderstemplatemodel.h
src/app/qml/: App.qml  ArrivalBusyIndicator.qml  ArrivalButton.qml  ArrivalCheckBox.qml  ArrivalHeaderSelector.qml  ArrivalJobTable.qml  FileSelectionArea.qml  InfoLabelArea.qml  Main.qml  Style.qml
src/app/resources/: resources.qrc
src/app/src/: app.cpp  main.cpp
src/app/src/data/: csvdocument.cpp  csvhandling.cpp  jobtable.cpp  selectedheaderstemplate.cpp  selectedheaderstemplatelist.cpp
src/app/src/ui/: appmodel.cpp  headerlistmodel.cpp  jobtablemodel.cpp  selectedheaderstemplatemodel.cpp
